fix overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
   position: relative;
   overflow-x: hidden !important;
+  overflow: hidden;
 }
 
 * {
